# FlowDesigner

./: README.md
FDOpenCV/: CMakeLists.txt  CvAdd.cc  CvAvg.cc  CvCanny.cc  CvCmp.cc  CvColor.cc  CvColor.h  CvContourArea.cc  CvCreateColor.cc  CvCreateImage.cc  CvCreateStructuringElement.cc  CvDilate.cc  CvDrawContours.cc  CvErode.cc  CvFindColorHSV.cc  CvFindColorRGB.cc  CvFindContours.cc  CvFirstContour.cc  CvGravityCenter.cc  CvGray.cc  CvImage.cc  CvImage.h  CvImageToJitterMatrix.cc  CvJitterMatrixToImage.cc  CvLine.cc  CvLoadImage.cc  CvLoadVideo.cc  CvMorphology.cc  CvNextContour.cc  CvNextHierarchy.cc  CvOpticalFlowHS.cc  CvOpticalFlowLK.cc  CvPrevContour.cc  CvPrevHierarchy.cc  CvQueryFrame.cc  CvRectangle.cc  CvSaveImage.cc  CvSelectContour.cc  CvShowImage.cc  CvShowImageQt.cc  (+11 more)
FDOpenCV/example/: Transformation.n  findContourRect.n  selectContour.n  videoFindColor.n  videoOpticalFlow.n  webcamFindColor.n  webcamFindMouvement.n  webcamGravityCenter.n
FDOpenCV/examples/: selectContour.n  webcamFindColor.n
FDOpenCV/macros/: FindOpenCV.cmake
FDQTTCP/: CMakeLists.txt  QtListenJitterMatrix.cc  QtListenString.cc  QtSendJitterMatrix.cc  QtSendString.cc  configure.in
FDQTTCP/exemple/: listenJitterMatrix.n  listenString.n  sendString.n
FlowDesigner/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  FlowDesigner.kdevelop  FlowDesigner.pc.cmake  FlowDesigner.pc.in  FlowDesigner.plist  FlowDesigner.spec.in  INSTALL  Makefile.am  NEWS  README  TODO  acinclude.m4  autogen.sh  bump_version.sh  config.h.in  configure.in  flowdesigner-config.cmake  flowdesigner-config.in  nflow.dtd  startup.sh
FlowDesigner/FuzzyEngine/: AUTHORS  Makefile.am  acinclude.m4  configure.in
FlowDesigner/FuzzyEngine/include/: FuzzyFunction.h  FuzzyModel.h  FuzzyOperators.h  FuzzyRule.h  FuzzySet.h  GenericModel.h  InferenceModel.h  Makefile.am  Tokenizer.h  TrapezoidalFunction.h  TriangularFunction.h
FlowDesigner/FuzzyEngine/n-files/: fan.n  modelRead.n
FlowDesigner/FuzzyEngine/src/: CMakeLists.txt  FuzzyFunction.cc  FuzzyModel.cc  FuzzyModelExec.cc  FuzzyOperators.cc  FuzzyRule.cc  FuzzySet.cc  GenericModel.cc  InferenceModel.cc  Makefile.am  Tokenizer.cc  TrapezoidalFunction.cc  TriangularFunction.cc
FlowDesigner/HMM/: ChangeLog  Makefile.am  acinclude.m4  configure.in
FlowDesigner/HMM/include/: DiagGMM.h  GMMScore.h  Makefile.am  acoustic_model.h  audioinfo.h  covariance.h  covariance_set.h  gaussian.h  gaussian_set.h  gmm.h  gmm_set.h  hmm.h  mean.h  mean_set.h  model.h  state.h  viterbi.h
FlowDesigner/HMM/src/: AdaptMAP.cc  CMakeLists.txt  DiagGMM.cc  DiagGMMScore.cc  DiagGMMSetScore.cc  DiagGMMTrain.cc  GMMScore.cc  GMMTrain.cc  MakeDiagGMM.cc  Makefile.am  MarkovProb.cc  TransMatrix.cc  acoustic_model.cc  audioinfo.cc  covariance.cc  covariance_set.cc  gaussian.cc  gaussian_set.cc  gmm.cc  gmm_set.cc  mean.cc  mean_set.cc
FlowDesigner/NNet/: INSTALL  Makefile.am  acinclude.m4  configure.in
FlowDesigner/NNet/include/: FFLayer.h  FFNet.h  Makefile.am  NNetSet.h  TrainingAlgo.h  functions.h
FlowDesigner/NNet/m/: Makefile.am  exportlayer.m
FlowDesigner/NNet/src/: CMakeLists.txt  FFLayer.cc  FFNet.cc  Makefile.am  NNetExec.cc  NNetExecRecurrent.cc  NNetInit.cc  NNetNew.cc  NNetSet.cc  NNetSetCalc.cc  NNetSetChooseBest.cc  NNetSetInit.cc  NNetSetTrain.cc  NNetSetTrainCGB.cc  NNetSetTrainDBD.cc  NNetTrain.cc  NNetTrainCGB.cc  NNetTrainDBD.cc  NNetTrainQProp.cc  NNetTrainRecurDBD.cc  NNetTrainRecurrent.cc  NNetTrainSCG.cc  NNetTrainWeightDBD.cc  TrainingAlgo.cc
FlowDesigner/OSXPackageMaker.pmdoc/: 01flowdesigner-contents.xml  01flowdesigner.xml  02flowdesigner-contents.xml  02flowdesigner.xml  03flowdesigner-contents.xml  03flowdesigner.xml  04liblibflow-contents.xml  04liblibflow.xml  05flowdesigner-contents.xml  05flowdesigner.xml  index.xml
FlowDesigner/VQ/: acinclude.m4  configure.in
FlowDesigner/VQ/include/: Cell.h  CodebookMap.h  FeatureMap.h  MMIScore.h  Makefile.am  RBF.h  kmeans.h  msvq.h  vq.h
FlowDesigner/VQ/src/: CMCalc.cc  CMTrain.cc  CMakeLists.txt  Cell.cc  CodebookMap.cc  FMapCalc.cc  FMapTrain.cc  FeatureMap.cc  MMIScore.cc  MMITrain.cc  MSVQTrain.cc  Makefile.am  RBF.cc  RBFTrain.cc  VQClass.cc  VQCloseness.cc  VQTrain.cc  VQWeightMeans.cc  VQuantize.cc  VQuantizeDiff.cc  kmeans.cc  msvq.cc
FlowDesigner/audio_blocks/: AUTHORS  Makefile.am  acinclude.m4  configure.in
FlowDesigner/audio_blocks/include/: FFTWrap.h  Makefile.am  audio.h  lpc.h  mdct.h  window.h
FlowDesigner/audio_blocks/src/: AEC.cc  (+82 more)
FlowDesigner/data-flow/: CMakeLists.txt  Makefile.am
FlowDesigner/doc/: FlowDesigner.tag  classes.dia
FlowDesigner/effects/: Makefile.am  acinclude.m4  configure.in
FlowDesigner/examples/: Makefile.am  README  demo_feedback.n  demo_if.n  dtmf.n  find_beat.n  helium.n  hello.n  keypad.n  mixedthread.n  play_mp3.n  reverb.n  sendWavOverTcp.n  socket_connect.n  socket_listen.n  tone.n
FlowDesigner/html/: API.html  CVS.html  FAQ.html  announce-0.1.0.html  authors.html  collect.html  collection.html  compiling.html  decoding.html  description.html  doc.html  download.html  extend.html  flowdesigner.webprj  front_end.html  hmm.html  home.html  index.html  indexa.html  indexb.html  internals.html  library.html  links.html  menu.html  modules.html  news.html  old_index.html  overview.html  screenshots.html  server.html  status.html  todo.html  training.html  user-guide.html
FlowDesigner/lapackflow/: COPYING  acinclude.m4  configure.in
FlowDesigner/macros/: FindFFTW3.cmake  FindGTest.cmake  FindLAPACK.cmake  FindLibXml2.cmake  FindOctave.cmake  FindOpenCV.cmake  UseDebian.cmake
FlowDesigner/octave/: Makefile.am  acinclude.m4  configure.in
FlowDesigner/package/: CMakeLists.txt
FlowDesigner/qtflow/: CMakeLists.txt  Makefile.am  configure.in  flowdesigner.qrc
FlowDesigner/templates/: Makefile.am  acinclude.m4  configure.in
FlowDesigner/toolbox/: CMakeLists.txt  cmake_install.cmake
FlowDesigner/tools/: Makefile.am
FlowDesigner/vflow/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  acconfig.h  acinclude.m4  config.h.in  configure.in
(+955 files in other folders)
