dnl Process this file with autoconf to produce a configure script.
CFLAGS="-O2"
CXXFLAGS="-O2"

AC_INIT([FDQtTCP], [0.0.1], [demo@lists.sourceforge.net])


AC_PREREQ(2.53)

FDQTTCP_MAJOR_VERSION=0
FDQTTCP_MINOR_VERSION=2
FDQTTCP_MICRO_VERSION=6
FDQTTCP_VERSION=$FDQTTCP_MAJOR_VERSION.$FDQTTCP_MINOR_VERSION.$FDQTTCP_MICRO_VERSION
FDQTTCP_INTERFACE_AGE=0
FDQTTCP_BINARY_AGE=0


AC_SUBST(FDQTTCP_MAJOR_VERSION)
AC_SUBST(FDQTTCP_MINOR_VERSION)
AC_SUBST(FDQTTCP_MICRO_VERSION)
AC_SUBST(FDQTTCP_INTERFACE_AGE)
AC_SUBST(FDQTTCP_BINARY_AGE)
AC_SUBST(FDQTTCP_VERSION)

# libtool versioning
LT_RELEASE=$FDQTTCP_MAJOR_VERSION.$FDQTTCP_MINOR_VERSION
LT_CURRENT=`expr $FDQTTCP_MICRO_VERSION - $FDQTTCP_INTERFACE_AGE`
LT_REVISION=$FDQTTCP_INTERFACE_AGE
LT_AGE=`expr $FDQTTCP_BINARY_AGE - $FDQTTCP_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

VERSION=$FDQTTCP_VERSION
PACKAGE=FDQtTCP

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
PKG_PROG_PKG_CONFIG
AC_CANONICAL_HOST
AC_DISABLE_STATIC
AC_ENABLE_SHARED
AM_PROG_LIBTOOL
AC_LANG_CPLUSPLUS

AC_ARG_PROGRAM

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MMAP
AC_CHECK_FUNCS(getcwd getwd putenv strdup)

dnl overflow-config test (Yannick Brosseau & Dominic Letourneau)

AC_PATH_PROG(AWK_PROG,awk,no,$PATH:$prefix/bin)
if test "$AWK_PROG" = no; then
	AC_MSG_ERROR(awk is required to configure $PACKAGE properly, please install it and try again.)
	exit
fi	


AC_PATH_PROG(FLOWDESIGNER_CONFIG,flowdesigner-config,no,$PATH:$FLOWDESIGNER_HOME/bin:$prefix/bin)
if test "$FLOWDESIGNER_CONFIG" = no; then
	AC_MSG_ERROR( Cannot find flowdesigner-config )
fi


AC_PATH_PROG(PKG_CONFIG,pkg-config,no,$PATH)
if test "$PKG_CONFIG" = no; then
	AC_MSG_ERROR( Cannot find pkg-config)
	exit
fi


VERSION=$FDQTTCP_VERSION
AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_MAINTAINER_MODE

dnl Additional includes & libraries

FLOWDESIGNER_LIB=`$FLOWDESIGNER_CONFIG --libs libflow`
FLOWDESIGNER_INCLUDE=`$FLOWDESIGNER_CONFIG --cflags config libflow | sed 's/\"/\\\"/g'`
FLOWDESIGNER_DATA=`$FLOWDESIGNER_CONFIG  --datadir`
FLOWDESIGNER_BIN=`$FLOWDESIGNER_CONFIG --bindir`

dnl Look for prefix, if not specified, use FlowDesigner default toolbox prefix
if test "x$prefix" = "xNONE"; then
  prefix=$FLOWDESIGNER_DATA/$PACKAGE                      
else
  dnl this will work, but we should maybe change the variable name
  FLOWDESIGNER_DATA=$prefix
fi

pkg_modules="QtCore QtGui QtNetwork libxml-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_SUBST(FLOWDESIGNER_LIB)
AC_SUBST(FLOWDESIGNER_INCLUDE)
AC_SUBST(FLOWDESIGNER_DATA)
AC_SUBST(FLOWDESIGNER_BIN)


dnl Output Files (makefiles)
AC_OUTPUT(Makefile)


dnl Notification message for the user to know which flags will be used for compilation
dnl should use AC_MSG_NOTICE(), but that's apparently not defined in autoconf 2.13
AC_MSG_RESULT([])
AC_MSG_RESULT([*************************************************************])
AC_MSG_RESULT([])
AC_MSG_RESULT([$PACKAGE will be built on a $build system to run])
AC_MSG_RESULT([on a $host system, with the following options:])
AC_MSG_RESULT([])

AC_MSG_RESULT([$PACKAGE will be installed in : $prefix])

